--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-/*  @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
- */
-:root {
-  --perfect: @import
-    url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+:root{
+  --perfect-font: Arvo;
 }
 
 * {
@@ -73,10 +72,18 @@ h2 {
   justify-content: center;
   align-items: center;
   gap: 1px;
-  font-family: var(--perfect);
   font-size: 80px;
   font-weight: 800;
   color: #ddd;
+  position: relative;
+}
+
+#amPm{
+  font: 18px var(--perfect-font);
+  font-weight: 600;
+  padding: 10px;
+  margin-left: 5px;
+  margin-top: 50px;
 }
 
 .calender-container {
@@ -90,7 +97,8 @@ h2 {
   padding: 20px;
   color: #fff;
   font-weight: bolder;
-  font-family: var(--perfect);
+  font-family: var(--perfect-font);
+  letter-spacing: 3px;
   border-radius: 10px;
 }
 .day {
@@ -99,7 +107,6 @@ h2 {
 }
 
 .date {
-  font-family: var(--perfect);
   font-size: 65px;
   font-weight: 609;
   font-family: Impact;
